Fix position of scrollbar and change color to white

--- a/asetss/style.css
+++ b/asetss/style.css
@@ -110,6 +110,11 @@ body {
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
+  position: absolute;
+  bottom: 30;
+  left: 0;
+  right: 0;
+  color: white;
 }
 
 .nav-styler {
